# celeborn

./: .asf.yaml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .rat-excludes  .scalafmt.conf  .yamllint  AGENTS.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  GenerateCelebornConfig.ps1  LICENSE  LICENSE-binary  METRICS.md  Makefile  NOTICE  NOTICE-binary  README-INTERNAL.md  README.md  ServiceConfig_celeborn.ini  ServiceConfig_master.ini  ServiceConfig_worker.ini  azure-pipelines-build-sparkclients.yml  azure-pipelines.yml  build.sbt  celeborn.ini  codecov.yml  es-metadata.yml  expand-copy.bat  makefile  metrics.ini  mkdocs.yml  pom.xml  requirements.txt  scalastyle-config.xml  startCommon.cmd  start_celeborn.bat  start_master.bat  start_worker.bat  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.husky/: pre-commit
api/: README.md  all.yaml  master_rest_v1.yaml  worker_rest_v1.yaml
ci/: buildkite.yaml  publish_artifacts.sh  publish_helm.sh  publish_image.sh  setup.sh  test.sh
cli/: README.md  pom.xml
client/: pom.xml
client-base/: pom.xml
client-mr/: pom.xml
common/: pom.xml
common-shaded/: pom.xml
conf/: celeborn-defaults.conf.template  celeborn-env.sh.template  celeborn-ratis-shell-env.sh.template  clb-env.sh.template  dynamicConfig.yaml  dynamicConfig.yaml.template  log4j.properties.template  log4j2.xml  log4j2.xml.template  metrics.properties  metrics.properties.template  mybatis-config.xml.template  quota.yaml.template  ratis-log4j.properties.template  rss-defaults.conf.template  rss-env.sh.template
cpp/: .clang-format  CMakeLists.txt  README.md  dummy.cc  exports.map  exports.txt
cpp/celeborn/: CMakeLists.txt
cpp/celeborn/client/: CMakeLists.txt  ShuffleClient.cpp  ShuffleClient.h
cpp/celeborn/client/compress/: Compressor.cpp  Compressor.h  Decompressor.cpp  Decompressor.h  Lz4Compressor.cpp  Lz4Compressor.h  Lz4Decompressor.cpp  Lz4Decompressor.h  Lz4Trait.h  ZstdCompressor.cpp  ZstdCompressor.h  ZstdDecompressor.cpp  ZstdDecompressor.h  ZstdTrait.h
cpp/celeborn/client/reader/: CelebornInputStream.cpp  CelebornInputStream.h  WorkerPartitionReader.cpp  WorkerPartitionReader.h
cpp/celeborn/client/tests/: CMakeLists.txt  CelebornInputStreamRetryTest.cpp  CelebornInputStreamTest.cpp  CompressorFactoryTest.cpp  DataBatchesTest.cpp  Lz4CompressorTest.cpp  Lz4DecompressorTest.cpp  PushDataCallbackTest.cpp  PushMergedDataCallbackTest.cpp  PushStateTest.cpp  PushStrategyTest.cpp  ReviveManagerTest.cpp  ShuffleClientImplTest.cpp  ShuffleClientTest.cpp  ShuffleClientTestUtils.h  WorkerPartitionReaderTest.cpp  ZstdCompressorTest.cpp  ZstdDecompressorTest.cpp
cpp/celeborn/client/writer/: DataBatches.cpp  DataBatches.h  PushDataCallback.cpp  PushDataCallback.h  PushMergedDataCallback.cpp  PushMergedDataCallback.h  PushState.cpp  PushState.h  PushStrategy.cpp  PushStrategy.h  ReviveManager.cpp  ReviveManager.h
cpp/celeborn/conf/: BaseConf.cpp  BaseConf.h  CMakeLists.txt  CelebornConf.cpp  CelebornConf.h
cpp/celeborn/conf/tests/: BaseConfTest.cpp  CMakeLists.txt  CelebornConfTest.cpp
cpp/celeborn/ffi/: CMakeLists.txt  CelebornFfi.cc  CelebornFfi.h
cpp/celeborn/memory/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt
cpp/celeborn/memory/tests/: ByteBufferTest.cpp  CMakeLists.txt
cpp/celeborn/network/: CMakeLists.txt  FrameDecoder.h  Message.cpp  Message.h  MessageDecoder.h  MessageDispatcher.cpp  MessageDispatcher.h  NettyRpcEndpointRef.cpp  NettyRpcEndpointRef.h  TransportClient.cpp  TransportClient.h
cpp/celeborn/network/tests/: CMakeLists.txt  FrameDecoderTest.cpp  MessageDecoderTest.cpp  MessageDispatcherTest.cpp  MessageTest.cpp  NettyRpcEndpointRefTest.cpp  TransportClientTest.cpp
cpp/celeborn/proto/: CMakeLists.txt  TransportMessagesCpp.proto
cpp/celeborn/protocol/: CMakeLists.txt  CompressionCodec.cpp  CompressionCodec.h  ControlMessages.cpp  ControlMessages.h  Encoders.cpp  Encoders.h  PartitionLocation.cpp  PartitionLocation.h  PushFailedBatches.h  StatusCode.h  TransportMessage.cpp  TransportMessage.h
cpp/celeborn/protocol/tests/: CMakeLists.txt  ControlMessagesTest.cpp  EncodersTest.cpp  PartitionLocationTest.cpp  TransportMessageTest.cpp
cpp/celeborn/tests/: CMakeLists.txt  DataSumWithMergeWriterClient.cpp  DataSumWithReaderClient.cpp  DataSumWithWriterClient.cpp
cpp/celeborn/utils/: CMakeLists.txt  CelebornException.cpp  CelebornException.h  CelebornUtils.cpp  CelebornUtils.h  Exceptions.cpp  Exceptions.h  ProcessBase.cpp  ProcessBase.h  StackTrace.cpp  StackTrace.h  flags.cpp
cpp/celeborn/utils/tests/: CMakeLists.txt  CelebornUtilsTest.cpp  ExceptionTest.cpp
cpp/cmake/: FindSodium.cmake  celeborn-config.cmake.in
cpp/scripts/: build-docker-image.sh  docker-vars.sh  launch-docker-container.sh  setup-helper-functions.sh  setup-ubuntu.sh  ubuntu-22.04-cpp.dockerfile
dev/: check-spark-2.3.sh  check-spark-2.4.sh  check-spark-3.0.sh  check-spark-3.1.sh  check-spark-3.2.sh  check-spark-3.3.sh  check.sh  checkForSpark2.sh  checkForSpark3.sh  checkstyle.xml  dependencies.sh  dependencyList  lint_grafana.py  make-distribution.sh  merge_pr.py  reformat  scalastyle-config.xml
docker/: DEPLOY_ON_K8S.md  Dockerfile
docs/: README.md  UPGRADE.md  benchmark.md  celeborn_cli.md  celeborn_ratis_shell.md  cli.md  cluster_planning.md  config_service.md  configuration.md  decommission.md  decommissioning.md  deploy.md  deploy_on_k8s.md  index.md  migration.md  monitoring.md  quota_management.md  restapi.md  security.md  storage-usage-quota.md  upgrade.md  upgrading.md  webapi.md  worker_tags.md  workerdecommission.md
licenses-binary/: LICENSE-BSD-3.txt  LICENSE-CDDL.txt  LICENSE-javassist.txt  LICENSE-mimepull.txt  LISENCE-jdktools.txt
lifecycle-manager/: pom.xml
master/: pom.xml
multipart-uploader/: pom.xml
openapi/: pom.xml
project/: AddMetaInfLicenseFiles.scala  Build.scala  BuildTools.scala  CelebornBuild.scala  JDKTools.scala  build.properties  plugins.sbt
release-docs/: LICENSE  README.txt
rust/: .gitignore  Cargo.toml
rust/celeborn-client/: Cargo.toml  build.rs
rust/celeborn-client/src/: lib.rs
(+3236 files in other folders)
