# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "celeborn-client"
version = "0.1.0"
edition = "2021"
description = "Rust-friendly wrapper around Apache Celeborn C++ client FFI"
publish = false

[dependencies]
celeborn-client-sys = { path = "../celeborn-client-sys" }
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"

[[example]]
name = "data_sum_writer"
path = "../examples/data_sum_writer.rs"

[[example]]
name = "data_sum_reader"
path = "../examples/data_sum_reader.rs"
